--- a/inicio-css/ejemplos-form/ejemplo-bueno/style-dos.css
+++ b/inicio-css/ejemplos-form/ejemplo-bueno/style-dos.css
@@ -6,10 +6,8 @@ body{
 
 h2{
     background: #303030;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    padding-left: 5%;
-    padding-right: 5%;
+    padding: 2% 5% 2% 5%;  /* Arriba(top) | Derecha(right) | Abajo(bottom) | Izquierda(left) */
+    border-radius: 10px 10px 0px 0px; 
 }
 
 #formulario{
@@ -19,6 +17,7 @@ h2{
     width: 40%;
     height: auto;
     padding-bottom: 20px;
+    border-radius: 10px;
 }
 
 .fLabel{
@@ -30,6 +29,7 @@ h2{
     color: #D04638; /*#D04638 #f0331d*/
     font-size: 12px;
     margin: 5px;
+    margin-top: 15px;
 }
 
 .cajaTextForm{
@@ -50,28 +50,24 @@ h2{
     outline: none;
     border: 0px;
     border-radius: 5px;
-
+    resize: none;
 }
 
 .parrafoForm{
     display: block;
     margin-bottom: 3px;
     margin-left: 5%;
-
 }
 
 .radioForm{
     display: inline-block;
-    margin-top: 0px;
-    margin-bottom: 10px;
-    margin-right: 2%;
-    margin-left: 5%;
+    margin: 0px 2% 15px 5%; /* Arriba(top) | Derecha(right) | Abajo(bottom) | Izquierda(left) */
 }
 
 .checkForm{
     display: inline-block;
     margin-left: 5%;
-    margin-right: 2%;
+    margin-right: 1%;
 }
 
 #f-boton{
